Fixed buttons from being cut off in IE11

--- a/src/components/CalibrationModal/CalibrationModal.scss
+++ b/src/components/CalibrationModal/CalibrationModal.scss
@@ -114,6 +114,7 @@
         padding: 6px 18px;
         margin-top: 8px;
         margin-left: 5px;
+        width: auto;
         width: fit-content;
         background: var(--primary-button);
         border-radius: 4px;
